codes/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:12:50 **** Incremental Build of configuration Debug for project Carro Seguidor ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Carro Seguidor.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\jvmen\Documents\ES070-2024-GrupoA2\codes\Carro Seguidor\STM32G474RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Carro Seguidor.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
C:/ST/STM32CubeIDE_1.16.0/STM32CubeIDE/plugins/com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.12.3.rel1.win32_1.0.200.202406191623/tools/bin/../lib/gcc/arm-none-eabi/12.3.1/../../../../arm-none-eabi/bin/ld.exe: warning: Carro Seguidor.elf has a LOAD segment with RWX permissions
Finished building target: Carro Seguidor.elf
 
arm-none-eabi-size  Carro\ Seguidor.elf 
arm-none-eabi-objdump -h -S Carro\ Seguidor.elf  > "Carro Seguidor.list"
   text	   data	    bss	    dec	    hex	filename
  43564	    120	   2936	  46620	   b61c	Carro Seguidor.elf
Finished building: default.size.stdout
 
Finished building: Carro Seguidor.list
 
18:13:06 **** Incremental Build of configuration Debug for project Carro Seguidor ****
make -j16 all 
arm-none-eabi-size  Carro\ Seguidor.elf 
   text	   data	    bss	    dec	    hex	filename
  43564	    120	   2936	  46620	   b61c	Carro Seguidor.elf
Finished building: default.size.stdout
 
18:14:45 **** Incremental Build of configuration Debug for project Carro Seguidor ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:154:19: error: 'ucLCD0Msg' undeclared (first use in this function)
  154 |   sprintf((char *)ucLCD0Msg, "Distancia (cm)");
      |                   ^~~~~~~~~
../Core/Src/main.c:154:19: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:67: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
18:15:01 **** Incremental Build of configuration Debug for project Carro Seguidor ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:104:38: warning: unused variable 'ucLCD1Msg' [-Wunused-variable]
  104 |         unsigned char ucLCD0Msg[17], ucLCD1Msg[17];
      |                                      ^~~~~~~~~
arm-none-eabi-gcc -o "Carro Seguidor.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\jvmen\Documents\ES070-2024-GrupoA2\codes\Carro Seguidor\STM32G474RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Carro Seguidor.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
C:/ST/STM32CubeIDE_1.16.0/STM32CubeIDE/plugins/com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.12.3.rel1.win32_1.0.200.202406191623/tools/bin/../lib/gcc/arm-none-eabi/12.3.1/../../../../arm-none-eabi/bin/ld.exe: warning: Carro Seguidor.elf has a LOAD segment with RWX permissions
Finished building target: Carro Seguidor.elf
 
arm-none-eabi-size  Carro\ Seguidor.elf 
arm-none-eabi-objdump -h -S Carro\ Seguidor.elf  > "Carro Seguidor.list"
   text	   data	    bss	    dec	    hex	filename
  46212	    120	   2960	  49292	   c08c	Carro Seguidor.elf
Finished building: default.size.stdout
 
Finished building: Carro Seguidor.list
 
